--- a/shop/docker-compose.yml
+++ b/shop/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 services:
     articles-service:
         container_name: articles-service
+        hostname: articles
         build:
             context: .
             dockerfile: Dockerfile
@@ -13,6 +14,7 @@ services:
             - ws_bridge
     computer-parts:
         build: ./comp_parts
+        hostname: parts
         command: python app.py
         ports:
             - "80:5000"
